fix: updated imagename and context

--- a/.github/workflows/build-validation.yaml
+++ b/.github/workflows/build-validation.yaml
@@ -6,7 +6,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: 'bane-nor/azure-pipelines-agent'
+  IMAGE_NAME: 'bane-nor/actions-runner'
 
 jobs:
   build-and-push-image:
@@ -35,7 +35,7 @@ jobs:
       - name: Build and push container image
         uses: docker/build-push-action@v6.9.0
         with:
-          context: src/docker
+          context: .
           push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
