--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-lates
     permissions:
       contents: write
-      pull-requests: writes
+      pull-requests: write
     steps:
       - uses: googleapis/release-please-action@v4
         with:
