ci(release): missing character in runner label
Signed-off-by: Roberth Strand <roberth.strand2@banenor.no>

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -9,7 +9,7 @@ name: Release Please
 
 jobs:
   release-please:
-    runs-on: ubuntu-lates
+    runs-on: ubuntu-latest
     permissions:
       contents: write
       pull-requests: write
